<resources>
    <string name="app_name">راننده</string>

    <string name="announcement">اطلاعیه</string>
    <string name="chat">پیام ها</string>
    <string name="map">نقشه</string>
    <string name="free_service">سفر های آزاد</string>
    <string name="service_management">مدیریت سفر</string>
    <string name="suggest_station">پیشنهاد ما برای ثبت محدوده</string>
    <string name="account_report">گزارش حساب</string>
    <string name="online_payment">پرداخت آنلاین</string>
    <string name="card_to_card">کارت به کارت</string>
    <string name="Home">خانه</string>
    <string name="financial">مالی</string>
    <string name="profile">حساب کاربری</string>
    <string name="service_history">تاریخچه سفر</string>
    <string name="payment_report">گزارش پرداخت</string>
    <string name="news">اخبار</string>
    <string name="support">پشتیبانی</string>
    <string name="Load_type">نوع بار : </string>
    <string name="Range">محدوده :</string>
    <string name="customerName">نام مشتری :</string>
    <string name="sendTime">ساعت اعزام :</string>
    <string name="customerTell">تلفن : </string>
    <string name="customerMobile">همراه :</string>
    <string name="Load_cost">ارزش بار :</string>
    <string name="Load_weight">وزن بار :</string>
    <string name="Settlement_side">طرف تسویه :</string>
    <string name="call">تماس</string>
    <string name="cancle">لغو</string>
    <string name="canclee">لغوشده</string>
    <string name="Place">به محل بار رسیدم</string>
    <string name="accept">قبول میکنم</string>
    <string name="Tracking_Code">کد پیگیری :</string>
    <string name="expense">هزینه :</string>
    <string name="name">نام</string>
    <string name="active">فعال</string>
    <string name="station">محدوده</string>
    <string name="father_name">نام پدر</string>
    <string name="station_info">اطلاعات محدوده</string>
    <string name="id">شمارشناسنامه</string>
    <string name="National_code">کد ملی</string>
    <string name="Shaba_number">شماره شبا</string>
    <string name="update_driver_status">در حال بروزرسانی وضعیت راننده...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_details">جزییات سفر</string>
    <string name="finish">پایان سفر</string>
    <string name="time">ساعت : </string>
    <string name="customer">به محل مهمان رسیدم</string>
    <string name="date_time">تاریخ و ساعت : </string>
    <string name="title_activity_cancel_service">CancelServiceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_us">درباره ما</string>
    <string name="returnBack">بازگشت به مبدا</string>
    <string name="creditCustomer">نحوه تسویه:</string>
    <string name="checkout_cargo">نحوه تسویه مرسوله :</string>
    <string name="origin">مبدا : </string>
    <string name="firstDestination">مقصد : </string>
    <string name="secondDestination">مقصد۲ : </string>
    <string name="thirdDestination">مقصد۳ : </string>
    <string name="carType">نوع خودرو : </string>
    <string name="cargoType">نوع بار : </string>
    <string name="priceService">هزینه سفر : </string>
    <string name="description">توضیحات</string>
    <string name="cargoCost">ارزش مرسوله : </string>
    <string name="desCount">تعداد مقصد ها : </string>
    <string name="setting">تنظیمات</string>
    <string name="stopTime">زمان توقف : </string>
    <string name="txt_importance">پرداخت از طریق ثبت واریزی حداکثر پس از 24 ساعت به حساب شما منظور میگردد.</string>
    <string name="txt_financial_desc">مبالغ کمتر از 20،000 تومان، فقط از طریق پرداخت آنلاین یا حضوری اقدام شود.</string>
    <string name="txt_increase_charge">شما میتوانید به دو طریق حساب خودرا شارژ نمایید:\n
    1.پرداخت آنلاین \t
        2.واریز به کارت \n
    در صورت واریز به کارت، فیش آن را ثبت نمایید.</string>
    <string name="Toman">تومان</string>
    <string name="charge">شارژ</string>
    <string name="financial_report">گزارش حساب</string>
    <string name="register_deposit">ثبت واریزی</string>
    <string name="track_deposit">پیگیری واریزی</string>
    <string name="tracking">پیگیری</string>
    <string name="card_number">شماره کارت مبدا</string>
    <string name="bank_name">نام بانک مبدا</string>
    <string name="tracking_code">کد پیگیری</string>
    <string name="register_deposit_slip">ثبت فیش واریزی</string>
    <string name="ID">شناسه</string>
    <string name="accept_service">قبول سفر</string>
    <string name="call_support">تماس با پشتیبانی</string>
    <string name="login">ورود</string>
    <string name="link">لینک</string>
    <string name="trip">سفر</string>

</resources>