<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/accept"
        android:background="@drawable/bg_grye"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        android:background="@drawable/background1"
        android:elevation="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                style="@style/Details_answer"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="احمد آباد" />

            <View
                android:layout_width="0dp"
                android:layout_weight="0.10"
                android:layout_height="match_parent" />


            <TextView
                style="@style/title_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/Range" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/ic_to_inform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_20sdp">



            <TextView
                style="@style/Details_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="محصولات کشاورزی" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"/>

            <TextView
                style="@style/title_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/Load_type" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>