<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionBar"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/llAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/item_title_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/profile" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_profile" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@color/grayLight" />

    <LinearLayout
        android:id="@+id/llServiceHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/item_title_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/service_history" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_service_history" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@color/grayLight" />

    <LinearLayout
        android:id="@+id/llNewsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/item_title_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/news" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_news" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@color/grayLight" />

    <TextView
        android:id="@+id/txtAppVersion"
        style="@style/item_title_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:text="1.0.0" />

    <LinearLayout
        android:id="@+id/llCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_calll" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="تماس با پشتیبانی"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>